--- a/style.css
+++ b/style.css
@@ -15,6 +15,40 @@ body {
   user-select: none;
 }
 
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
+li {
+  list-style: none;
+}
+
+button {
+  background: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.btn {
+  background: #7010ff;
+  padding: 0.5rem 1rem;
+  border-radius: 10px;
+  color: #fff;
+  font-weight: 600;
+  transition: 0.3s ease-in-out;
+}
+
+.btn:active {
+  opacity: 0.7;
+}
+
+.btn-secondary {
+  background: transparent;
+  border: 1px solid #3a3b3c;
+}
+
 .container {
   max-width: 1300px;
   min-width: 1100px;
@@ -130,6 +164,45 @@ body {
   min-height: 150px;
 }
 
+.ticket-purchase-popup {
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  background: #121314;
+  border: 1px solid #3a3b3c;
+  padding: 1rem;
+  border-radius: 10px;
+  grid-gap: 1rem;
+  z-index: 9999;
+  transition: 0.3s ease;
+  transform: translate(-50%, -50%) scale(0);
+}
+
+.ticket-purchase-popup .ticket-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.ticket-purchase-popup .rent-details {
+  width: 100%;
+}
+
+.purchase-btns {
+  display: flex;
+  justify-content: space-between;
+  grid-gap: 1rem;
+}
+
+.purchase-btns .btn {
+  flex: 1;
+}
+
 /*! Dice */
 
 .dies {
@@ -139,6 +212,7 @@ body {
   display: flex;
   grid-gap: 1rem;
   transform: translate(-50%, -50%);
+  z-index: 999;
 }
 
 .dice {
@@ -338,4 +412,53 @@ body {
 
 .right .c-silver {
   border-left: 5px solid silver;
+}
+
+/* Player */
+
+.player-details {
+  position: absolute;
+  width: 800px;
+  height: 700px;
+  top: 18%;
+  left: 20%;
+}
+
+.player {
+  position: absolute;
+  outline: 1px solid #3a3b3c;
+  border-radius: 10px;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.player p {
+  color: #3a3b3c;
+}
+
+.player-red {
+  top: 0%;
+  left: 0%;
+  border-top: 5px solid crimson;
+}
+
+.player-blue {
+  top: 0%;
+  right: 0%;
+  border-top: 5px solid #7010ff;
+}
+
+.player-yellow {
+  bottom: 0%;
+  left: 0%;
+  border-top: 5px solid gold;
+}
+
+.player-green {
+  bottom: 0%;
+  right: 0%;
+  border-top: 5px solid yellowgreen;
 }
